# mula

./: .env.example  .env.local.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  CLAUDE.md  README.md  components.json  conductor.json  index.html  package.json  tsconfig.json  vite.config.ts
.claude/: PLAN.md  PROGRESS.md  SPEC.md  settings.json
docs/plans/: 2025-02-09-testing-mode-design.md  2026-02-09-tauri-migration-design.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: DevBranchTag.tsx  Layout.tsx  theme-provider.tsx
src/components/Auth/: AuthSettingsModal.tsx
src/components/Chat/: Chat.tsx  ConceptQuestionBlock.tsx  ExerciseBlock.tsx  ExerciseSubmissionCard.tsx  ExerciseUpdateBlock.tsx  MarkdownContent.tsx  Message.tsx  MessageInput.tsx  MessageList.tsx  ProjectSelector.tsx  ToolCallBlock.tsx
src/components/Editor/: CodeEditor.tsx  EditorToolbar.tsx
src/components/Exercise/: ExerciseActions.tsx  ExerciseEditor.tsx  ExerciseHeader.tsx  ExerciseInstructions.tsx  ExercisePanel.tsx  FillInBlankEditor.tsx  languageMap.ts
src/components/UI/: ContextMenu.tsx  (+10 more)
src/hooks/: use-tauri.ts  useChat.ts  useCredentialStatus.ts  useGlobalJobStatus.ts  useProjects.ts  useSessions.ts  useStreamBuffer.ts
src/lib/: sidecar.ts
src/pages/: Home.tsx  SessionPage.tsx
src/sidecar/: chatJobs.ts  chatRoute.ts  database.ts  index.ts  migrations.ts  routes.ts  tutorServer.ts  verifyRoute.ts
src/types/: constrained-editor-plugin.d.ts
(+59 files in other folders)
