[package]
name = "coding-tutor"
version = "0.1.0"
description = "AI-powered coding tutor desktop app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0" }
tauri-plugin-log = "2"
tauri-plugin-stronghold = "2"
tauri-plugin-shell = "2"
rand = "0.8"
portpicker = "0.1"
tokio = { version = "1", features = ["process", "time", "sync"] }
